--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - MYSQL_PASSWORD=music-streaming-authentication-mysql
       - MYSQL_DATABASE=music-streaming-authentication
       - MYSQL_ROOT_HOST=%
+      - MYSQL_TCP_PORT=3307
     networks:
       - fullstack
     volumes:
