--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,11 @@ services:
       DB_DB: "music-streaming-authentication"
       DB_HOST: "music-streaming-authentication-db"
       DB_PORT: "3307"
+      GRPC_PORT: "8002"
+      REST_PORT: "8012"
     ports:
       - "8002:8002"
+      - "8012:8012"
     depends_on:
       - db
     networks:
