Implement Authorization Interceptor

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       DB_PORT: "3307"
       GRPC_PORT: "8002"
       REST_PORT: "8012"
+      JWT_SECRET_KEY: "jwt_secret_key"
     ports:
       - "8002:8002"
       - "8012:8012"
